```mermaid
erDiagram
    meal_prep_ingredients {
        int meal_prep_id PK, FK
        int ingredient_id PK, FK
        int ingredient_quantity
    }
    meal_preps {
        int meal_prep_id PK
        string meal_prep_name
        string description
    }
    ingredients_components {
        int ingredient_id PK, FK
        int component_id PK, FK
        float component_quantity
    }
    ingredients {
        int ingredient_id PK
        string ingredient_name
    }
    components {
        int component_id PK
        string component_name
    }
meal_preps ||--|{ meal_prep_ingredients : contains
ingredients ||--|{ meal_prep_ingredients : contains
ingredients ||--|{ ingredients_components : contains
components ||--|{ ingredients_components : contains
```